# x10-rtic-exti-f4-rs

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
