[package]
name = "x10-rtic-exti-f4-rs"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>", "Josh Johnson"]
edition = "2018"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies]
embedded-hal = "0.2.4"
usb-device = "0.2.5"
usbd-hid = "0.4.4"
panic-halt = "0.2.0"
panic-semihosting = "0.5"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.6.3"
cortex-m-rtic = { version = "0.6.0-alpha.0" }
rtic-core = "0.3.1"
stm32f4xx-hal = { version = "*", features = ["rt", "stm32f411",] }
stm32-usbd = { version = "*", features = ["ram_access_2x16"] }